Update deprecated call in HtmlElementUtils